--- a/app/src/main/res/layout/fragment_withdraw_create.xml
+++ b/app/src/main/res/layout/fragment_withdraw_create.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_scroll_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/login_background"
@@ -58,6 +59,242 @@
             app:layout_constraintTop_toBottomOf="@+id/withdraw_create_title"
             tools:itemCount="3"
             tools:listitem="@layout/item_taxi" />
+
+        <TextView
+            android:id="@+id/daily_withdrawal_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="46dp"
+            android:drawableEnd="@drawable/ic_question"
+            android:drawablePadding="10dp"
+            android:text="@string/daily_withdrawal"
+            android:textColor="@color/gray_intro_text"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/taxi_recycler" />
+
+        <ImageView
+            android:id="@+id/plus_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/daily_withdrawal_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/daily_withdrawal_tv"
+            app:srcCompat="@drawable/ic_plus_light_gray" />
+
+        <ImageView
+            android:id="@+id/minus_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/daily_withdrawal_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/daily_withdrawal_tv"
+            app:srcCompat="@drawable/ic_minus_gray" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/account_block"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv">
+
+            <ImageView
+                android:id="@+id/background"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
+                android:background="@drawable/bg_profile_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/bank_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="14dp"
+                android:text="ПАО “Сбербанк”"
+                android:textColor="@color/withdraws_gray"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintTop_toTopOf="@+id/background" />
+
+            <TextView
+                android:id="@+id/order_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="6dp"
+                android:text="Р/с 408190009938888837"
+                android:textColor="@color/withdraws_gray"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintTop_toBottomOf="@+id/bank_name_tv" />
+
+            <TextView
+                android:id="@+id/name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="8dp"
+                android:text="Поликин Г. И"
+                android:textColor="@color/gray_profile"
+                android:textSize="13sp"
+                app:layout_constraintStart_toStartOf="@+id/background"
+                app:layout_constraintTop_toBottomOf="@+id/order_tv" />
+
+            <ImageView
+                android:id="@+id/delete_icon"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_margin="@dimen/margin_16dp"
+                app:layout_constraintEnd_toEndOf="@+id/background"
+                app:layout_constraintTop_toTopOf="@+id/background"
+                app:srcCompat="@drawable/ic_delete" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/space"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginEnd="36dp"
+            android:background="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/account_block" />
+
+        <TextView
+            android:id="@+id/instant_withdrawal_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="@dimen/margin_24dp"
+            android:drawableEnd="@drawable/ic_question"
+            android:drawablePadding="10dp"
+            android:text="@string/instant_withdrawal"
+            android:textColor="@color/gray_intro_text"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/space" />
+
+        <ImageView
+            android:id="@+id/plus_card_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/instant_withdrawal_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/instant_withdrawal_tv"
+            app:srcCompat="@drawable/ic_plus_light_gray" />
+
+        <ImageView
+            android:id="@+id/minus_card_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/instant_withdrawal_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/instant_withdrawal_tv"
+            app:srcCompat="@drawable/ic_minus_gray" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/add_card_block"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/instant_withdrawal_tv">
+
+            <ImageView
+                android:id="@+id/card_background"
+                android:layout_width="match_parent"
+                android:layout_height="74dp"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:layout_marginTop="@dimen/margin_24dp"
+                android:layout_marginEnd="@dimen/margin_24dp"
+                android:src="@drawable/bg_profile_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/add_card_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_24dp"
+                android:text="@string/add_new_card"
+                android:textColor="@color/withdraws_yellow"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/card_background"
+                app:layout_constraintStart_toStartOf="@id/card_background"
+                app:layout_constraintTop_toTopOf="@+id/card_background" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/sum_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginTop="42dp"
+            android:text="@string/sum"
+            android:textColor="@color/gray_intro_text"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/add_card_block" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/sum_input_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_24dp"
+            android:hint="@string/enter_amount"
+            android:textColorHint="@color/gray_profile"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sum_tv">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/sum_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/gray_profile"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLines="1"
+                android:textColor="@color/gray_intro_text"
+                android:textColorHint="@color/gray_profile"
+                android:textSize="16sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/add_account_button"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            android:layout_margin="@dimen/margin_24dp"
+            android:background="@drawable/bg_intro_btn"
+            android:text="@string/send_request"
+            android:textAllCaps="false"
+            android:textColor="@color/continue_color"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
