--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -136,16 +136,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:visibility="invisible"
-                app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv">
+                app:layout_constraintTop_toBottomOf="@+id/daily_withdrawal_tv"
+                tools:visibility="visible">
 
                 <ImageView
                     android:id="@+id/new_account_background"
                     android:layout_width="match_parent"
-                    android:layout_height="405dp"
+                    android:layout_height="0dp"
                     android:layout_marginStart="@dimen/margin_24dp"
                     android:layout_marginTop="@dimen/margin_24dp"
                     android:layout_marginEnd="@dimen/margin_24dp"
                     android:src="@drawable/bg_profile_gradient"
+                    app:layout_constraintBottom_toBottomOf="@+id/bik_input_view"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -180,7 +182,7 @@
                     android:layout_marginStart="@dimen/margin_24dp"
                     android:layout_marginTop="@dimen/margin_32dp"
                     android:layout_marginEnd="@dimen/margin_24dp"
-                    android:hint="@string/first_middle_name"
+                    android:hint="@string/first_name"
                     android:textColorHint="@color/gray_profile"
                     android:textSize="@dimen/text_13sp"
                     app:layout_constraintEnd_toEndOf="@+id/new_account_background"
@@ -230,6 +232,34 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/middle_name_input_view"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_24dp"
+                    android:layout_marginTop="@dimen/margin_24dp"
+                    android:layout_marginEnd="@dimen/margin_24dp"
+                    android:hint="@string/middle_name"
+                    android:textColorHint="@color/gray_profile"
+                    android:textSize="@dimen/text_13sp"
+                    app:layout_constraintEnd_toEndOf="@+id/new_account_background"
+                    app:layout_constraintStart_toStartOf="@+id/new_account_background"
+                    app:layout_constraintTop_toBottomOf="@+id/surname_input_view">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/middle_name_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/gray_profile"
+                        android:imeOptions="actionNext"
+                        android:inputType="textCapSentences"
+                        android:maxLines="1"
+                        android:textColor="@color/gray_intro_text"
+                        android:textColorHint="@color/gray_profile"
+                        android:textSize="@dimen/text_16sp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/account_input_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -241,7 +271,7 @@
                     android:textSize="@dimen/text_13sp"
                     app:layout_constraintEnd_toEndOf="@+id/new_account_background"
                     app:layout_constraintStart_toStartOf="@+id/new_account_background"
-                    app:layout_constraintTop_toBottomOf="@+id/surname_input_view">
+                    app:layout_constraintTop_toBottomOf="@+id/middle_name_input_view">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/account_edit_text"
@@ -265,6 +295,7 @@
                     android:layout_marginTop="@dimen/margin_24dp"
                     android:layout_marginEnd="@dimen/margin_24dp"
                     android:hint="@string/bik"
+                    android:paddingBottom="@dimen/margin_24dp"
                     android:textColorHint="@color/gray_profile"
                     android:textSize="@dimen/text_13sp"
                     app:layout_constraintEnd_toEndOf="@+id/new_account_background"
@@ -384,7 +415,8 @@
                 android:textSize="@dimen/text_24sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/account_block" />
+                app:layout_constraintTop_toBottomOf="@+id/account_block"
+                tools:visibility="invisible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cards_recycler"
@@ -399,7 +431,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/instant_withdrawal_tv"
                 tools:itemCount="2"
-                tools:listitem="@layout/item_accounts_card" />
+                tools:listitem="@layout/item_accounts_card"
+                tools:visibility="invisible" />
 
             <!--  =========  -->
 
@@ -523,11 +556,11 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_4dp"
+                    android:fontFamily="sans-serif-medium"
                     android:text="@string/new_card_message"
                     android:textColor="@color/gray_profile"
-                    android:fontFamily="sans-serif-medium"
-                    app:layout_constraintBottom_toBottomOf="@+id/new_card_background"
                     android:textSize="@dimen/text_13sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/new_card_background"
                     app:layout_constraintStart_toStartOf="@+id/card_input_view"
                     app:layout_constraintTop_toBottomOf="@+id/card_input_view" />
 
