--- a/app/src/main/res/layout/fragment_connection.xml
+++ b/app/src/main/res/layout/fragment_connection.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/root_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/main_background"
